force-app/main/default/objects/Job_Information__c/Job_Information__c.object-meta.xml
<CustomObject>
    <label>Job Information</label>
    <nameField>
        <displayFormat>JI-{0000}</displayFormat>
        <label>Job Information ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>