force-app/main/default/objects/Job_Information__c/fields/Consultant_Email__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Email__c</fullName>
    <label>Consultant Email</label>
    <type>Email</type>
</CustomField>