force-app/main/default/objects/Job_Information__c/fields/Consultant_Name__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Name__c</fullName>
    <label>Consultant Name</label>
    <type>TextArea</type>
</CustomField>