force-app/main/default/objects/Job_Information__c/fields/Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Code__c</fullName>
    <label>Job Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>