force-app/main/default/objects/Job_Information__c/fields/Profile_Status__c.field-meta.xml
<CustomField>
    <fullName>Profile_Status__c</fullName>
    <label>Profile Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>