force-app/main/default/objects/Job_Information__c/fields/Status_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_By__c</fullName>
    <label>Status Changed By</label>
    <type>TextArea</type>
</CustomField>