force-app/main/default/objects/Job_Information__c/fields/Status_Changed_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_On_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Changed On Date</label>
    <type>DateTime</type>
</CustomField>