force-app/main/default/objects/Job_Information__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <label>Submitted By</label>
    <type>TextArea</type>
</CustomField>