force-app/main/default/objects/Job_Information__c/fields/Talent_Bench_Code__c.field-meta.xml
<CustomField>
    <fullName>Talent_Bench_Code__c</fullName>
    <label>Talent Bench Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>