force-app/main/default/objects/Job_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Code__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Consultant_Name__c</columns>
    <columns>Consultant_Email__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>